flipcards.css
.flip-card {
    position:relative;
    left: 200px;
    background-color: transparent;
    width: 643px;
    height: 459px;
    border-radius: 8px;
    /*border: 2px solid #333333; */
    perspective: 1000px; /* Remove this if you don't want the 3D effect */
  }

  
  .flip-card-inner {
    border-radius: 8px;
    position: relative;
    width: 100%;
    height: 100%;
    /*text-align: center; */
    transition: transform 0.8s;
    transform-style: preserve-3d;
  }

  .flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
  }

  .flip-card-front, .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden; /* Safari */
    backface-visibility: hidden;
  }

  .flip-card-front {
    background-color: #bbb;
    color: black;
  }

  .flip-card-back {
    background-color: transparent;
    color: #333333;
    font-size: 20px;
    transform: rotateY(180deg);
  }

